--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,3 @@
-[submodule "themes/ananke"]
-	path = themes/ananke
-	url = https://github.com/theNewDynamic/gohugo-theme-ananke.git
-[submodule "themes/default"]
-	path = themes/default
-	url = https://github.com/harshturna/blog-theme-test
+[submodule "themes/hersh"]
+	path = themes/hersh
+	url = https://github.com/grayesih/blog-theme.git
