--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "themes/hersh"]
-	path = themes/hersh
+[submodule "themes/main"]
+	path = themes/main
 	url = https://github.com/grayesih/blog-theme.git
