--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "themes/myTheme"]
-	path = themes/myTheme
-	url = https://github.com/grayesih/blog-theme.git
+[submodule "themes/main"]
+	path = themes/main
+	url = https://github.com/grayesih/blog-theme
